compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__let_exhaustiveness1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1432
expression: "\npub fn main(b) {\n    let True = b\n    Nil\n}\n"
---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:3:5
  │
3 │     let True = b
  │     ^^^^^^^^^^^^

This assignment does not match all possibilities.
Either use a case expression with patterns for each possible
value, or use `let assert` rather than `let`.

These values are not matched:

  - False


